--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /.phpunit.cache
 /node_modules
-/public/build
 /public/hot
 /public/storage
+/public/upload
 /storage/*.key
 /vendor
 .env
@@ -17,3 +17,5 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+
+*.json
