--- a/package.json
+++ b/package.json
@@ -19,8 +19,17 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@tailwindcss/typography": "^0.5.13",
+        "@tiptap/extension-image": "^2.4.0",
+        "@tiptap/extension-link": "^2.5.3",
+        "@tiptap/extension-table": "^2.4.0",
+        "@tiptap/extension-table-cell": "^2.4.0",
+        "@tiptap/extension-table-header": "^2.4.0",
+        "@tiptap/extension-table-row": "^2.4.0",
+        "@tiptap/extension-text-align": "^2.4.0",
         "@tiptap/pm": "^2.4.0",
         "@tiptap/starter-kit": "^2.4.0",
-        "@tiptap/vue-3": "^2.4.0"
+        "@tiptap/vue-3": "^2.4.0",
+        "vuex": "^4.0.2"
     }
 }
