--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-vue": "^5.0.0",
         "alpinejs": "^3.4.2",
@@ -30,6 +29,8 @@
         "@tiptap/pm": "^2.4.0",
         "@tiptap/starter-kit": "^2.4.0",
         "@tiptap/vue-3": "^2.4.0",
+        "vue-draggable-next": "^2.2.1",
+        "vue3-carousel": "^0.3.3",
         "vuex": "^4.0.2"
     }
 }
