--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.6.0",
         "@tailwindcss/typography": "^0.5.13",
         "@tiptap/extension-image": "^2.4.0",
         "@tiptap/extension-link": "^2.5.3",
